--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,11 @@
 # VS Code which you may wish to be included in version control, so this line
 # is commented out by default.
 #.vscode/
+/webview_flutter/
+/android/.settings
+.project
+/webview_flutter/pubspec.lock
+pubspec.lock
 
 # Flutter/Dart/Pub related
 **/doc/api/
